--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,31 @@
-autopep8==2.0.2
+astroid==2.15.0
 bidict==0.22.1
+black==23.1.0
 click==8.1.3
+dill==0.3.6
 Flask==2.2.3
 Flask-Cors==3.0.10
 Flask-SocketIO==5.3.2
 h11==0.14.0
+isort==5.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+lazy-object-proxy==1.9.0
 MarkupSafe==2.1.2
+mccabe==0.7.0
+mypy-extensions==1.0.0
+packaging==23.0
+pathspec==0.11.0
+platformdirs==3.1.1
 pycodestyle==2.10.0
+pylint==2.17.0
 python-engineio==4.3.4
 python-socketio==5.7.2
 simple-websocket==0.9.0
 six==1.16.0
 tomli==2.0.1
+tomlkit==0.11.6
+typing_extensions==4.5.0
 Werkzeug==2.2.3
+wrapt==1.15.0
 wsproto==1.2.0
