--- a/src/dockerfile
+++ b/src/dockerfile
@@ -1,9 +1,12 @@
 # Flask Build
 FROM python:3.10
+
+WORKDIR /usr/var/app
+
 RUN apt -y update
 RUN apt install -y python3-pip build-essential nodejs npm
 COPY . .
 RUN npm run build
 RUN pip3 install -r requirements.txt
-ENTRYPOINT [ "python3" ]
-CMD ["main.py"]
+EXPOSE 5000
+CMD ["python", "main.py"]
