--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -3,9 +3,13 @@ bidict==0.22.1
 black==23.1.0
 click==8.1.3
 dill==0.3.6
+dnspython==1.16.0
 Flask==2.2.3
 Flask-Cors==3.0.10
 Flask-SocketIO==5.3.2
+gevent==22.10.2
+greenlet==2.0.2
+gunicorn==20.1.0
 h11==0.14.0
 isort==5.12.0
 itsdangerous==2.1.2
@@ -29,3 +33,5 @@ typing_extensions==4.5.0
 Werkzeug==2.2.3
 wrapt==1.15.0
 wsproto==1.2.0
+zope.event==4.6
+zope.interface==5.5.2
